[Pagination] Fix an overflow issue

--- a/app/javascript/src/styles/common/paginator.scss
+++ b/app/javascript/src/styles/common/paginator.scss
@@ -8,6 +8,7 @@
 
   width: max-content;
   margin: 0 auto;
+  max-width: calc(100vw - 1rem);
 
   & > a, & > span {
     display: flex;
